--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   <link rel="stylesheet" href="asset/style.css" />
 </head>
 <body>
-  <div class="container">
-    <h1>AI Usage Converter</h1>
-    <div class="stats">
-      <div class="stat">
-        <h2 id="tokenCount">Tokens: 0</h2>
-        <p id="charCount">Characters: 0</p>
-      </div>
-      <div class="stat">
-        <h2 id="energy">Energy: 0.00000 kWh</h2>
-        <p id="equivalent">Equivalent: -</p>
-      </div>
+  <h1>AI Carbon Translator</h1>
+  <div>
+    <div>
+      🌍 Net carbon emission: <strong>0.0000 kg CO₂</strong><br>
+      🧮 Emitted: 0.0000 - Offset: 0.0000 kg
     </div>
-    <textarea id="prompt" rows="5" placeholder="Type your ChatGPT prompt here..."></textarea>
-    <button onclick="calculateUsage()">Convert</button>
-    <div class="result" id="resultText"></div>
+    <label>Choose real-world equivalent:</label>
+    <select>
+      <option>📱 1 iPhone charge</option>
+      <option>💡 Use 60W bulb for 1 hour</option>
+      <option>🚿 1 hot shower</option>
+      <option>🍳 Fry 1 egg</option>
+      <option>🍵 Brew 1 cup of tea</option>
+      <option>🌀 Run fan for 1 hour</option>
+    </select>
+    <div>♻️ Equivalent: 1 iPhone charge</div>
   </div>
 
   <script src="asset/converter.js"></script>
