Added Offset Emission html

--- a/index.html
+++ b/index.html
@@ -57,6 +57,32 @@
     <button>Calculate Emission</button>
   </section>
 
+  <section>
+    <h2>Step 2: Offset Your Emissions</h2>
+    <div class="task-grid">
+      <div class="task">
+        🌳 Plant a tree (-0.01kg)
+      </div>
+      <div class="task">
+        🚶 Walk 1km (-0.005kg)
+        <div>
+          <button >-</button>
+          <span>0</span>
+          <button>+</button>
+        </div>
+      </div>
+      <div class="task">
+        ♻️ Recycle plastic (-0.002kg)
+        <div>
+          <button>-</button>
+          <span>0</span>
+          <button>+</button>
+        </div>
+      </div>
+    </div>
+    <button>🔄 Reset Offset</button>
+  </section>
+
   <script src="asset/converter.js"></script>
 </body>
 </html>
