Updated css labeling

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>AI Carbon Translator</h1>
-  <div> 
+  <div class="summary-card" id="emissionResult"> 
     <div>
       🌍 Net carbon emission: <strong>0.0000 kg CO₂</strong><br>
       🧮 Emitted: 0.0000 - Offset: 0.0000 kg
@@ -41,7 +41,7 @@
         <option>Image Generation</option>
         <option>Video AI</option>
       </select>
-      <div id="taskContainer"></div>
+      <div id="taskContainer" class="task-grid"></div>
     </div>
 
     <div>
