--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>AI Usage Converter</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Aleo:ital,wght@0,100..900;1,100..900&family=Arsenal:ital,wght@0,400;0,700;1,400;1,700&family=Bigshot+One&family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=GFS+Didot&family=Lora:ital,wght@0,400..700;1,400..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="asset/style.css" />
 </head>
 <body>
@@ -30,8 +33,8 @@
     <label>Choose Input Method</label>
     <select id="inputMode" class="input-mode" onchange="updateInputMode()">
       <option value="common">Choose from common tasks</option>
-      <option value="time">Input by usage time (hours)</option>
-      <option value="prompt">Input a custom prompt</option>
+      <!-- <option value="time">Input by usage time (hours)</option>
+      <option value="prompt">Input a custom prompt</option> -->
     </select>
 
     <div id="commonInput">
@@ -44,7 +47,7 @@
       <div id="taskContainer" class="task-grid"></div>
     </div>
 
-    <div id="timeInput" style="display:none;">
+    <!-- <div id="timeInput" style="display:none;">
       <label>Time spent on AI (in hours)</label>
       <input type="number" placeholder="e.g. 1.5">
     </div>
@@ -55,19 +58,21 @@
     </div>
 
     <button onclick="calculateCarbon()">Calculate Emission</button>
-  </section>
+  </section> -->
 
   <section>
     <h2>Step 2: Offset Your Emissions</h2>
     <div class="task-grid">
       <div class="task">
         🌳 Plant a tree (-0.01kg)
+        <div>
+          <button onclick="adjustOffset('tree', -1)">-</button>
+          <span id="treeCount">0</span>
+          <button onclick="adjustOffset('tree', 1)">+</button>
+        </div>
       </div>
-        <button onclick="adjustOffset('tree', -1)">-</button>
-        <span id="treeCount">0</span>
-        <button onclick="adjustOffset('tree', 1)">+</button>
-      </div>
-    </div>
+
+
       <div class="task">
         🚶 Walk 1km (-0.005kg)
         <div>
