--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1>AI Carbon Translator</h1>
   <div class="summary-card" id="emissionResult"> 
     <div id="carbonSummary">
-      🌍 Net carbon emission: <strong>0.0000 kg CO₂</strong><br>
+      🌍 Net carbon emission: <strong>0.0000 kg</strong><br>
       🧮 Emitted: 0.0000 - Offset: 0.0000 kg
     </div>
     <label for="equivalentSelector">Choose real-world equivalent:</label>
